# simple-collision

./: .gitignore  Cargo.toml  README.md
src/: collision_resolution.rs  lib.rs
src/collision2d/: mod.rs
src/collision2d/shapes/: aabb.rs  circle.rs  mod.rs
src/collision3d/: collision_resolution.rs  mod.rs  ray.rs
src/collision3d/shapes/: aabb.rs  capsule.rs  cylinder.rs  mod.rs  plane.rs  ray.rs  sphere.rs  triangle.rs
