[package]
name = "simple-collision"
version = "0.1.11"
authors = ["<temdog007@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple collision detection library"
keywords = ["collision"]
repository = "https://github.com/Temdog007/simple-collision"

[dependencies.num-traits]
version = "0.2.12"

[dependencies.nalgebra]
version = "0.22.1"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0.116"
optional = true
features = ["serde_derive"]

[dependencies.arrayvec]
version = "0.5.1"

[features]
default = []
serde-serialize = ["serde"]