[package]
name = "simple-collision"
version = "0.1.26"
authors = ["<temdog007@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple collision detection library"
keywords = ["collision"]
repository = "https://github.com/Temdog007/simple-collision"

[dependencies.num-traits]
version = "0.2.14"

[dependencies.nalgebra]
version = "0.23.0"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0.117"
optional = true
features = ["serde_derive"]

[dependencies.arrayvec]
version = "0.5.2"

[features]
default = []
serde-serialize = ["serde"]